<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailsActivity">

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_action_order"
        android:title="@string/order_supplies"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete_item"
        android:title="@string/delete_item"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete_all_data"
        android:title="@string/delete_all"/>


</menu>