<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <RelativeLayout style="@style/image_layout_list">

        <ImageView
            android:id="@+id/image_view"
            style="@style/image_list"
            android:src="@drawable/upload" />

        <TextView
            android:id="@+id/sold_out"
            style="@style/sold_out"
            android:text="@string/sold_out" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            style="@style/product_name_list"
            tools:text="Nombre del Producto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price"
                    style="@style/price_list"
                    tools:text="200" />

                <TextView
                    style="@style/currency_list"
                    android:text="@string/currency" />

            </LinearLayout>

            <TextView
                android:id="@+id/qty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/quantity"
                style="@style/quantity_list"
                android:text=""
                tools:text="20" />

            <ImageView
                android:id="@+id/sale"
                style="@style/sale_image_list"
                android:src="@drawable/cart" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>